--- a/design.css
+++ b/design.css
@@ -1,12 +1,13 @@
 body{
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family: "Georgia", serif;
   margin: 0;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #e5e5e5;
-  color: #000;
+  background: #CAFAC8;
+  background: radial-gradient(circle, rgba(202, 250, 200, 1) 20%, rgba(249, 251, 242, 1) 40%, rgba(197, 252, 220, 1) 60%, rgba(124, 199, 200, 1) 80%, rgba(51, 111, 153, 1) 100%);
+  color: #FFF;
 }
 
 .container{
@@ -15,8 +16,9 @@ body{
   max-height: 90vh;
   overflow-y: auto;
   padding: 20px;
-  background: #fff;
+  background: #;
   border-radius: 12px;
+  border: 4px dashed #397DAC;
   box-shadow: 0 6px 20px rgba(0,0,0,0.15);
 }
 
@@ -32,14 +34,14 @@ body{
   font-size: 18px;
   font-weight: 600;
   margin: 15px 0 10px;
-  color: #222;
+  color: #FFF;
 }
 
 .step{
   margin-bottom: 20px;
   padding: 15px;
-  border: 1px solid #ccc;
-  background: #f7f7f7;
+  border: 4px dashed #7CC7C8;
+  background: #000;
   border-radius: 8px;
 }
 
@@ -53,14 +55,14 @@ body{
   width: 160px;
   text-align: right;
   margin-right: 10px;
-  color: #333;
+  color: #C5FCDC;
 }
 
 input{
   width: 60px;
   padding: 6px;
   margin: 2px;
-  border: 1px solid #ccc;
+  border: 2px dashed #C5FCDC;
   border-radius: 4px;
   text-align: center;
   color: #000;
@@ -75,7 +77,7 @@ button{
   padding: 10px 18px;
   margin-top: 10px;
   cursor: pointer;
-  background: #0a3d62;
+  background: #244D6B;
   color: #fff;
   border: none;
   border-radius: 6px;
@@ -99,7 +101,7 @@ table{
 th{
   padding: 8px 12px;
   text-align: center;
-  color: #333;
+  color: #C5FCDC;
   font-weight: normal;
 }
 
@@ -120,10 +122,10 @@ td input{
 }
 
 #matrixOutput td{
-  border: 1px solid #333;
+  border: 1px solid #C5FCDC;
   padding: 12px;
   min-width: 30px;
   text-align: center;
   font-size: 16px;
-  background: #fafafa;
+  background: #062743; ;
 }
